<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/tv_main_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_50"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_50"/>

    <Button
        android:id="@+id/btn_start_timer"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_timer"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_50"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_50"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_50"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_50"/>

    <Button
        android:id="@+id/btn_my_exercise"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_my_exercise"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@id/btn_start_timer"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_50"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_50"/>

    <Button
        android:id="@+id/btn_do_exercise"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_do_exercise"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@id/btn_my_exercise"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_50"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_50"/>

    <Button
        android:id="@+id/btn_show_calendar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_show_calendar"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@id/btn_do_exercise"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_50"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_50"/>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@id/btn_show_calendar"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_50"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_50"/>
</androidx.constraintlayout.widget.ConstraintLayout>