<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ExerciseEditFragment"
    android:id="@+id/fragment_exercise_edit">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    
    <TextView
        android:id="@+id/tv_rest_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_rest_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_50"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_add_rest_time"/>

    <Button
        android:id="@+id/btn_add_rest_time"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/sym_plus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_50" />

    <EditText
        android:id="@+id/edit_rest_time"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_default_rest_time"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:maxLines="1"
        android:gravity="center_horizontal"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_add_rest_time"
        app:layout_constraintStart_toEndOf="@id/btn_add_rest_time"
        app:layout_constraintEnd_toStartOf="@id/btn_sub_rest_time"/>

    <Button
        android:id="@+id/btn_sub_rest_time"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/sym_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_add_rest_time" />
    
    <ddwu.mobile.final_project.ma02_20170979.model.DndListView
        android:id="@+id/list_editable_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_rest_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@android:color/holo_red_light"
        android:src="@drawable/baseline_keyboard_arrow_up_white_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_expand"
        app:backgroundTint="@android:color/holo_red_light"
        android:src="@drawable/outline_add_white_24"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_start_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_add_exercise"
        app:backgroundTint="@android:color/holo_red_light"
        android:src="@drawable/outline_directions_run_white_24"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>